# das_grad

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  sherlock_setup.sh
configs/: urban_grad.yaml
notebooks/: inv.ipynb  prep_vsg.ipynb  sloth.ipynb
slurm/: run_eval_synth.slurm  run_grad_urban.slurm
src/: eval.py  grad.py  gradiometry.py  inv.py  laplacian.py  mask.py  ncf.py  plots.py  post.py  synth.py  utils.py  vsg.py
tests/: conftest.py  test_gradiometry.py  test_laplacian.py  test_mask_vsg_post.py  test_pipeline.py
